lang/interpret_test/TestAstFunc2/unify-interpolate-res-fail.txtar
-- main.mcl --
$name = ["a", "bb", "ccc",]

#test $name {}    # must pass
test "${name}" {} # must fail

-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @4:1-4:17
--
test "${name}" {} # must fail
^^^^^^^^^^^^^^^^^

ERROR: type error: str != list
